--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -60,12 +60,16 @@
                     <div><span>D</span></div>
                     <div><span>A</span></div>
                     <div><span>Y</span></div>
+                    <div><span>T</span></div>
+                    <div><span>O</span></div>
+                    <div><span>P</span></div>
+                    <div><span>A</span></div>
                 </div>
                 <div class="avatar">
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
-                    <img src="./MyAvatar.jpg" alt="" class="avatar__img" onclick="showMessage()" />
+                    <img src="./pa_logi.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Ngọc Tiến</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Phương Anh</h1>
                 </div>
                 
                 <!-- 5. Phần nhạc -->
