--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -82,19 +82,10 @@
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                 swal({
                     title: "Lời nhắn", // Tiêu đề của popup
-                    text: "Gửi đến tôi, chàng trai năm 20 tuổi, hãy biết cố gắng thật nhiều để sau này không hối hận, hãy biết yêu thương bản thân để luôn có sức khỏe khỏe mạnh, hãy biết hiếu thuận gia đình để bố mẹ không bao giờ buồn, và cũng hãy đi tìm nàng công chúa của mình đi nào.", // Nội dung lời nhắn
-                    <input type="button" value="Em cảm ơn nhaaa" onclick="answer()"/>                
-                });
-            }
-            
-            function answer() {
-                // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
-                swal({
-                    title: "Lời nhắn", // Tiêu đề của popup
-                    text: "Làm bạn anh nhé", // Nội dung lời nhắn
+                    text: "Gửi em, Phương Anh, cô gái tuổi 18, những lời chúc tốt đẹp nhất trong ngày em bước sang những trang trải nghiệm mới của cuộc đời.", // Nội dung lời nhắn
                     button: {
                         text: "❤️️",
-                    },
+                    },      
                 });
             }
         </script>
