--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -87,7 +87,10 @@
   confirmButtonColor: '#3085d6',
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
-  cancelButtonColor: '#d33'
+  cancelButtonColor: '#d33',
+  confirmButtonClass: 'btn btn-success',
+  cancelButtonClass: 'btn btn-danger',
+  buttonsStyling: false
 }).then(
 function () 
 {
