--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -113,6 +113,7 @@ function ()
 });
             }
         </script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.all.min.js"></script>
+        
     </body>
 </html>
