--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -66,7 +66,7 @@
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
                     <img src="./pa_logi.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Phương An</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Phương Anh</h1>
                 </div>
                 
                 <!-- 5. Phần nhạc -->
@@ -114,7 +114,8 @@ function ()
 });
             }
         </script>	    
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
+	    <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
+            <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css">
         
     </body>
 </html>
