--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -27,7 +27,7 @@
             type="text/javascript"
             src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"
         ></script>
-	    import swal from 'sweetalert2'
+	    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <meta content="clickberry-extension-here" />
     </head>
 
@@ -114,7 +114,7 @@ function ()
 });
             }
         </script>	    
-	    
+	 <script src="sweetalert2.all.min.js"></script>   
         
     </body>
 </html>
