--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -15,6 +15,7 @@
         <link rel="shortcut icon" type="image/png" href="./birthdayCake.png"/>
         <title>Happy Birthday</title>
         <link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.9/sweetalert2.min.css">
         <script>
             window.open = function () {};
             window.print = function () {};
@@ -27,7 +28,6 @@
             type="text/javascript"
             src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"
         ></script>
-	    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <meta content="clickberry-extension-here" />
     </head>
 
@@ -114,7 +114,7 @@ function ()
 });
             }
         </script>	    
-	 <script src="sweetalert2.all.min.js"></script>   
+	 https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.9/sweetalert2.min.js 
         
     </body>
 </html>
