--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -88,7 +88,7 @@
   confirmButtonColor: '#3085d6',
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
-  cancelButtonColor: '#d33',
+  cancelButtonColor: '#d33'
 }).then(
 function () 
 {
