--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -85,10 +85,11 @@
   title: "Lời nhắn",
   text: "Chúc mừng sinh nhật em",
   showCancelButton: true,
-  confirmButtonColor: '#3085d6',
+  confirmButtonColor: '#FF6600',
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
-  cancelButtonColor: '#d33'
+  cancelButtonColor: '#CCCC99',
+  buttonsStyling: false
 }).then(
 function () 
 {
