--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -66,7 +66,7 @@
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
                     <img src="./pa_logi.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Phương An</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Phương Anh</h1>
                 </div>
                 
                 <!-- 5. Phần nhạc -->
@@ -89,6 +89,8 @@
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
   cancelButtonColor: '#CCCC99',
+  confirmButtonClass: 'btn btn-success',
+  cancelButtonClass: 'btn btn-danger',
   buttonsStyling: false
 }).then(
 function () 
