--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -85,10 +85,10 @@
   title: "Lời nhắn",
   text: "Chúc mừng sinh nhật em",
   showCancelButton: true,
-  confirmButtonColor: '#FF6600',
+  confirmButtonColor: '#3085d6',
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
-  cancelButtonColor: '#CCCC99',
+  cancelButtonColor: '#d33',
   confirmButtonClass: 'btn btn-success',
   cancelButtonClass: 'btn btn-danger',
   buttonsStyling: false
