--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -89,8 +89,8 @@
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
   cancelButtonColor: '#d33',
-  confirmButtonClass: 'btn btn-success',
-  cancelButtonClass: 'btn btn-danger',
+  confirmButtonClass: 'btn-success',
+  cancelButtonClass: 'btn-danger',
   buttonsStyling: false
 }).then(
 function () 
