--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -66,7 +66,7 @@
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
                     <img src="./pa_logi.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Phương Anh</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Phương An</h1>
                 </div>
                 
                 <!-- 5. Phần nhạc -->
@@ -89,9 +89,6 @@
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
   cancelButtonColor: '#d33',
-  confirmButtonClass: 'btn-success',
-  cancelButtonClass: 'btn-danger',
-  buttonsStyling: false
 }).then(
 function () 
 {
