--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -15,7 +15,7 @@
         <link rel="shortcut icon" type="image/png" href="./birthdayCake.png"/>
         <title>Happy Birthday</title>
         <link rel="stylesheet" href="./style.css">
-	<link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.10/sweetalert2.min.css">
         <script>
             window.open = function () {};
             window.print = function () {};
@@ -66,7 +66,7 @@
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
                     <img src="./pa_logi.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Phương Anh</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Phương An</h1>
                 </div>
                 
                 <!-- 5. Phần nhạc -->
@@ -88,9 +88,7 @@
   confirmButtonColor: '#3085d6',
   confirmButtonText: 'Em đồngg yý ạạ ❤️',
   cancelButtonText: 'Dạ, cái này thì...',
-  cancelButtonColor: '#d33',
-  confirmButtonClass: 'btn btn-success',
-  cancelButtonClass: 'btn btn-danger'
+  cancelButtonColor: '#d33'
 }).then(
 function () 
 {
@@ -113,6 +111,6 @@ function ()
 });
             }
         </script>
-	    <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>     
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.10/sweetalert2.min.js"></script>     
     </body>
 </html>
