--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="avatar">
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
-                    <img src="./pa_logi.jpg" alt="" class="avatar__img" onclick="showMessage()" />
+                    <img src="./MyAvatar.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
                     <h1 onclick="showMessage()" class="avatar__title">Name</h1>
                 </div>
