--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -81,34 +81,36 @@
             }
             function showMessage() {
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
-                swal({
-  title: "title",
-  text: "main text",
-  showCancelButton: true,
-  confirmButtonColor: '#3085d6',
-  confirmButtonText: 'yes',
-  cancelButtonText: 'no',
-  cancelButtonColor: '#d33'
-}).then(
-function () 
-{
-    swal(
-    'titleyes',
-	'text-yes',
-	{button: "yes",}
-	);
-}, function (dismiss) 
-{
+                swal.fire({
+                  title: "title",
+                  text: "main text",
+                  showCancelButton: true,
+                  confirmButtonColor: '#3085d6',
+                  confirmButtonText: 'yes',
+                  cancelButtonText: 'no',
+                  cancelButtonColor: '#d33'
+                }).then(function () 
+                {
+                   swal.fire(
+                      'titleyes',
+	              'text-yes',
+	              {button: "yes",}
+	              );
+                 }, 
+			function (dismiss) 
+                    {
   // dismiss can be 'cancel', 'overlay',
   // 'close', and 'timer'
-  if (dismiss === 'cancel') {
-    swal(
-    'title _no',
-	'text no ',
-	{button: "no",}
-    );
-  }
-});
+                        if (dismiss === 'cancel') {
+                           swal.fire(
+                            'title _no',
+	                    'text no ',
+	                    {button: "no",}
+                            );
+                        }
+                     });
+		    
+		    
             }
         </script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.10/sweetalert2.min.js" integrity="sha512-OgIASmUioEN3o3gYIAxYUeW4G5FWdhORLq0p7UhTM6Xrm5XGY4IrSDM3uYTCNh4ik4V8BX0NaX9/Z/VMqigCzg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
