--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -81,34 +81,23 @@
             }
             function showMessage() {
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
-                swal.fire({
-                  title: "title",
-                  text: "main text",
-                  showCancelButton: true,
-                  confirmButtonColor: '#3085d6',
-                  confirmButtonText: 'yes',
-                  cancelButtonText: 'no',
-                  cancelButtonColor: '#d33'
-                }).then(function () 
-                {
-                   swal.fire(
-                      'titleyes',
-	              'text-yes',
-	              {button: "yes",}
-	              );
-                 }, 
-			function (dismiss) 
-                    {
-  // dismiss can be 'cancel', 'overlay',
-  // 'close', and 'timer'
-                        if (dismiss === 'cancel') {
-                           swal.fire(
-                            'title _no',
-	                    'text no ',
-	                    {button: "no",}
-                            );
-                        }
-                     });
+                  swal.fire({
+      title: "title",
+      text: "main text",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      confirmButtonText: "yes",
+      cancelButtonText: "no",
+      cancelButtonColor: "#d33",
+    })
+    .then((result) => {
+      let confirmed = result.confirmed;
+      if (confirmed) {
+        swal.fire("titleyes", "text-yes", { button: "yes" });
+      } else {
+        swal.fire("titleno", "text-no", { button: "no" });
+      }
+    });
 		    
 		    
             }
