--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -84,7 +84,7 @@
                   swal.fire({
       title: "title",
       text: "main text",
-      background: '#fff url("MyBirthday/main.jpg")',
+      background: '#fff url("MyBirthday/main.JPG")',
       color: '#716add',
       showCancelButton: true,
       confirmButtonColor: "#3085d6",
@@ -95,9 +95,9 @@
     .then((result) => {
       let confirmed = result.isConfirmed;
       if (confirmed) {
-        swal.fire("titleyes", "text-yes", { button: "yes" }, background: '#fff url("MyBirthday/yes.jpg")');
+        swal.fire("titleyes", "text-yes", { button: "yes" }, background: '#fff url("MyBirthday/yes.JPG")');
       } else {
-        swal.fire("titleno", "text-no", { button: "no" },background: '#fff url("MyBirthday/no.jpg")',);
+        swal.fire("titleno", "text-no", { button: "no" },background: '#fff url("MyBirthday/no.JPG")',);
       }
     });
 		    
