--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -83,8 +83,7 @@
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                   swal.fire({
       title: "title",
-      text: "main text",
-      background: '#fff url("MyBirthday/main.JPG")',
+      text: "main text",      
       color: '#716add',
       showCancelButton: true,
       confirmButtonColor: "#3085d6",
@@ -97,7 +96,7 @@
       if (confirmed) {
         swal.fire("titleyes", "text-yes", { button: "yes" }, background: '#fff url("MyBirthday/yes.JPG")');
       } else {
-        swal.fire("titleno", "text-no", { button: "no" },background: '#fff url("MyBirthday/no.JPG")',);
+        swal.fire("titleno", "text-no", { button: "no" }, background: '#fff url("MyBirthday/no.JPG")');
       }
     });
 		    
