--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -85,6 +85,7 @@
       title: "title",
       text: "main text",      
       color: '#716add',
+      background: '#fff url("./yes.JPG")',
       showCancelButton: true,
       confirmButtonColor: "#3085d6",
       confirmButtonText: "yes",
@@ -98,14 +99,14 @@
 		title: "titleyes",
 		text: "text-yes", 
 		confirmButtontext: "yes", 
-		background: '#fff url("MyBirthday/yes.JPG")'
+		background: '#fff url("./yes.JPG")'
 	});
       } else {
         swal.fire({
 		title: "titleno",
 		text: "text-no", 
 		confirmButtontext: "no", 
-		background: '#fff url("MyBirthday/no.JPG")'
+		background: '#fff url("./no.JPG")'
 	});
       }
     });
