--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -96,7 +96,7 @@
         rgba(0,0,123,0.4)
         url("./bd_gif.gif")
         left top
-        repeat
+        no-repeat
         `
     })
     .then((result) => {
