--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -66,12 +66,12 @@
                     <!-- 3. Avatar của người bạn muốn gởi lời chúc -->
                     <img src="./MyAvatar.jpg" alt="" class="avatar__img" onclick="showMessage()" />
                     <!-- 4. Tên của người đó -->
-                    <h1 onclick="showMessage()" class="avatar__title">Name</h1>
+                    <h1 onclick="showMessage()" class="avatar__title">Name1</h1>
                 </div>
                 
                 <!-- 5. Phần nhạc -->
                  <audio autoplay>
-                    <source src="./music.mp3" type="audio/mp3">
+                    <source src="./music.mp3" type="audio/mpeg">
                 </audio> 
             </div>
         </div>
