--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -70,7 +70,9 @@
                 </div>
                 
                 <!-- 5. Phần nhạc -->
-                 
+                 <audio autoplay loop> 
+			 <source src="./music.mp3" type="audio/mp3">
+                 </audio> 
             </div>
         </div>
         <script>
