--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -71,7 +71,7 @@
                 
                 <!-- 5. Phần nhạc -->
                  <audio autoplay loop> 
-			 <source src="./music.mp3" type="audio/mp3">
+			 <source src="./music.mp3">
                  </audio> 
             </div>
         </div>
