--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -89,8 +89,8 @@
       background: '#fff url("./yes.JPG")',
       showCancelButton: true,
       confirmButtonColor: "#3085d6",
-      confirmButtonText: "yes",
-      cancelButtonText: "no",
+      confirmButtonText: "yes yes yes yes ❤️",
+      cancelButtonText: "no no co no no...",
       cancelButtonColor: "#d33",
       width: 800,
       backdrop: `
