--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -83,8 +83,9 @@
             function showMessage() {
                 // 6. Lời nhắn hiện ra khi bấm vào tên hoặc avatar
                   swal.fire({
-      title: "title",
-      text: "main text",      
+      title: "Lời nhắn",
+      text: "Gửi em, Phương Anh, cô gái tuổi 18, những lời chúc tốt đẹp nhất trong ngày sinh nhật này. Anh chúc em luôn vui vẻ, xinh xắn, tràn đầy năng lượng và luôn giữ sự tự tin để trải nghiệm được nhiều thứ vui tươi <3. 
+      Anh có duyên biết được em, không biết em có thể cho anh cơ hội làm bạn em được khum? (em đừng từ chối nhes :3)",      
       color: '#716add',
       background: '#fff url("./yes.JPG")',
       showCancelButton: true,
