--- a/MyBirthday/MyBirthday.html
+++ b/MyBirthday/MyBirthday.html
@@ -35,7 +35,10 @@
 	    <!-- 5. Phần nhạc -->
                  <audio autoplay loop> 
 			 <source src="./music.mp3">
-                 </audio> 
+                 </audio>
+	    <video id="background-video" autoplay loop>
+               <source src="./output.mp4" type="video/mp4">
+            </video>
         <link
             href="https://fonts.googleapis.com/css?family=Wendy+One"
             rel="stylesheet"
